2003-03-03  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/plustek/Plustek-USB-TODO.txt: update
	* backend/plustek-devs.c backend/plustek-usb.c backend/plustek-usbhw.c
	  backend/plustek-usbimg.c backend/plustek-usbscan.c backend/plustek.c: 
	  Fixed some bugs, that avoid proper function of Genius devices and
	  the HP2100c. Fixed also a problem, that causes permanent warmup cylces
	  on EPSON Photo devices.

2003-03-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx_devices.c backend/gt68xx_gt6801.c
	  doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Make sure that the firmware for
	  plustek-like scanners is loaded. Didn't work for Genius vivid3xe.
	  Added both Genius scanners to man page. Removed warning from Genius
	  Vivid3xe.

2003-03-02  Michael Herder <crapsite@gmx.net>

        * doc/descriptions/artec_eplus48u.desc:
        * backend/artec_eplus48u.conf:
          Added new model Umax AstraSlim SE

2003-03-01  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions-external/ibm.desc: Added Ricoh IS-430.
	* doc/descriptions/unsupported.desc: Updated Microtek scanners. Added
	  Umax AstraSlim SE.

2003-02-28  Ulrich Deiters <ukd@xenon.pc.uni-koeln.de>

	* backend/canon-sane.c: Adjusted to use the new sanei_constrain_value
	  function; made some cosmetic changes to reduce the number of compiler
	  warnings

2003-02-27  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c  backend/gt68xx.conf backend/gt68xx_devices.c
	  backend/gt68xx_low.c backend/gt68xx_low.h doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Added Genius Colorpage Vivid3xe. Added
	  request_type and request fields to the command set. Request is 0x01
	  or 0x04.
	* doc/descriptions/unsupported.desc: Added Compaq S4 100 and Microtek
	  Scanmaker 4800.
	
2003-02-26  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions-external/hp5400.desc: Added description for hp5400