@@ -1,3 +1,10 @@
+2003-03-04  Henning Meier-Geinitz <henning@meier-geinitz.de>
+
+	* include/sane/sanei.h sanei/sanei_constrain_value.c: Added function
+	  sanei_check_value in addition to the existing sanei_constrain_value.
+	  It checks if the value of a sane option fits into the constraint but
+	  doesn't try to do any fixing/rounding.
+
 2003-03-03  Gerhard Jaeger <gerhard@gjaeger.de>
 	* doc/plustek/Plustek-USB-TODO.txt: update
 	* backend/plustek-devs.c backend/plustek-usb.c backend/plustek-usbhw.c
